--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,7 @@
 	<packaging>pom</packaging>
 	<modules>
 		<module>fastdfs</module>
+		<module>caffeine</module>
 	</modules>
 	<properties>
 		<java.version>1.8</java.version>
